# nixrs

./: Cargo.toml  LICENSE  README.md  build.rs
src/: ast.rs  context.rs  lex.rs  lib.rs  parse.lalrpop  parse.rs  parser.rs  symbol.rs  symbol_table.rs
tests/: lexer.rs
tests/lexer/: double-quotes-1.out  double-quotes-2.out  double-quotes-3.in  double-quotes-3.out  double-quotes-4.out  double-quotes-interpolation-1.in  double-quotes-interpolation-1.out  double-quotes-interpolation-2.in  double-quotes-interpolation-2.out  double-quotes-interpolation-3.in  double-quotes-interpolation-3.out  double-quotes-interpolation-4.in  double-quotes-interpolation-4.out  identifiers-1.out  identifiers-2.out  identifiers-3.out  integers-1.out  integers-2.out  integers-3.out  ints-vs-idents-1.out  ints-vs-idents-2.out  whitespace-and-comments-2.out  whitespace-and-comments-3.in  whitespace-and-comments-3.out  whitespace-and-comments-4.in  whitespace-and-comments-4.out
