[package]
authors = ["Scott Olson <scott@solson.me>"]
name = "nixrs"
version = "0.1.0"

[dependencies]
clap = "2.1.2"
itertools = "0.4.11"
lalrpop-util = "0.15.0"
lazy_static = "0.2.1"
regex = "0.2.2"

[build-dependencies]
lalrpop = "0.15.0"

[dev-dependencies]
glob = "0.2.11"
pretty_assertions = "0.5.1"
